Fix goal grid alignment issue

--- a/components/goal-grid/index.css
+++ b/components/goal-grid/index.css
@@ -291,9 +291,8 @@
 
 @media (min-width: 1200px) {
   .GoalGrid-description {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
-
   .GoalGrid-description--long {
     font-size: 1rem;
   }
@@ -302,7 +301,7 @@
 .GoalGrid-button {
   display: inline-block;
   padding: 0.65em 1em 0.55em;
-  margin-top: 0.5em;
+  margin-top: 1em;
   color: transparent;
   font-size: 1.5rem;
   font-family: var(--heading-font-family);
